<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/starAnimationView"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_marginTop="-80dp"
            android:layout_marginBottom="-80dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/trophy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/correct_answer"
            android:textColor="@color/color_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="14dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:paddingTop="10dp"
                android:paddingEnd="80dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/color_1"
                    android:textSize="18sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/time"
            android:textColor="@color/color_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="14dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:paddingTop="10dp"
                android:paddingEnd="80dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/color_1"
                    android:textSize="18sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/score"
            android:textColor="@color/color_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="14dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:paddingTop="10dp"
                android:paddingEnd="80dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/color_1"
                    android:textSize="18sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            style="@style/button_try_again"
            android:layout_marginTop="8dp"
            android:text="@string/finish" />

    </LinearLayout>

</androidx.cardview.widget.CardView>